#******************************************************************************
# Copyright (c) 2020, Intel Corporation. All rights reserved.
# 
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception.
# 
# *****************************************************************************

add_subdirectory(asserts)
add_subdirectory(counter)
add_subdirectory(decoder)
add_subdirectory(fsm)
add_subdirectory(intrinsic)
add_subdirectory(latch_ff)
add_subdirectory(int_error)
add_subdirectory(dvcon20)
